testsuite/single/tests/compiler/fail/lvar_func.lpc
void foo() {
    int x;
    (: x :);
}
